# cmake_minimum_required(VERSION <specify CMake version here>)
project(SymbolTable)

set(CMAKE_CXX_STANDARD 11)

add_executable(SymbolTable 1505015_main.cpp 1505015_ScopeTable.cpp 1505015_ScopeTable.h 1505015_SymbolInfo.cpp 1505015_SymbolInfo.h 1505015_SymbolTable.cpp 1505015_SymbolTable.h 1505015_LinkedList.cpp 1505015_LinkedList.h 1505015_HashTable.cpp 1505015_HashTable.h 1505015_Const.h 1505015_TypeDefn.h)